# Paperleaf

./: .gitignore  LICENSE  PAGE_FLIP_DOCUMENTATION.md  PREMIUM_PAGEFLIP_IMPLEMENTATION.md  PageFlipView.java  ReaderActivity.kt  build.gradle.kts  local.properties  package-lock.json  settings.gradle.kts  summary.md
PageFlip/: build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_draw.cpp
app/src/main/res/anim/: morph_in_reverse.xml  morph_out_reverse.xml
app/src/main/res/drawable/: add_image.xml  align_center.xml  align_left.xml  arrow_down.xml  bg_book_cover.xml  bg_book_cover_thickness.xml  bg_book_shadow.xml  bg_book_thickness.xml  bg_bottom_capsule.xml  bg_circle_btn.xml  bg_circle_btn_glass.xml  bg_dialog_glass.xml  bg_glass_bottom.xml  bg_glass_premium.xml  bg_glass_tool_btn.xml  bg_glass_toolbar_pill.xml  bg_liquid_glass_book.xml  bg_liquid_glass_shelf.xml  bg_noise.xml  bg_ocean_btn.xml  bg_rim_light.xml  bg_tool_bar.xml  bg_tool_btn.xml  bg_toolbar_pill.xml  bg_toolbar_solid.xml  bold.xml  check.xml  clipboard.xml  copy.xml  eye.xml  eye_closed.xml  eye_drop.xml  flip_vertical.xml  font.xml  hand_grabbing.xml  horizontal.xml  ic_about.xml  ic_add.xml  ic_back.xml  ic_book_open.xml  (+58 more)
app/src/main/res/layout/: activity_book.xml  activity_main.xml  activity_paper_store.xml  activity_reader.xml  activity_sketch.xml  activity_splash.xml  item_book.xml  item_book_pager.xml  item_page_grid.xml  layer_item.xml
app/src/main/res/raw/: loading_spinner.json  (+1 more)
tools/: generate-previews.js
(+82 files in other folders)
